@@ -15,26 +15,30 @@
  */
 
 plugins {
-  id 'org.unbroken-dome.xjc' version '1.4.1'
-  id 'com.github.hauner.jarTest' version '1.0.1'
+  id 'org.unbroken-dome.xjc'
+  id 'org.ehcache.build.deploy'
+  id 'biz.aQute.bnd.builder'
 }
-
-apply plugin: EhDeploy
-apply plugin: 'com.github.hauner.jarTest'
 
 dependencies {
   api project(':api')
   implementation project(':core')
   implementation project(':impl')
+  implementation "org.glassfish.jaxb:jaxb-runtime:$parent.jaxbVersion"
+
   testImplementation 'org.xmlunit:xmlunit-core:2.6.0', 'org.xmlunit:xmlunit-matchers:2.6.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-fluent-api:3.0'
   xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+configurations.xjcClasspath.resolutionStrategy.dependencySubstitution {
+  substitute module('commons-beanutils:commons-beanutils:1.9.3') with module('commons-beanutils:commons-beanutils:1.9.4')
+}
+
+jar {
+  bnd (
+    'Export-Package': 'org.ehcache.xml, org.ehcache.xml.exceptions, org.ehcache.xml.model',
+  )
 }
 
 xjcGenerate {
